# vkvideo-downloader

./: .gitignore  .windsurfrules  README.md  justfile  main.py  pyproject.toml  video_links.json  video_links.yml
src/: main.py
src/app/: browser.py  cli_app.py  downloader.py  downloader2.py  exporter.py  extractor.py  factory.py  logger.py  main.py  settings.py
src/tests/: factory.py  test_live.py
src/tests/fakes/: capture_logger.py
src/tests/live/: test_browser_functionality.py  test_downloader.py  test_downloader2.py  test_e2e.py  test_video_extraction.py
src/tests/unit/: factory.py  pytest.ini  test_cli.py  test_extractor.py
src/tests/unit/fakes/: capture_logger.py
tests/: test_cli.py  test_main.py
tests/fixtures/: failed_extraction.har
