[project]
name = "vk-batch-downloader"
version = "0.1.0"
description = "Download videos from VK (VKontakte) social network"
authors = [
    {name = "illiam",email = "ilichpost@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.50.0,<2.0.0)",
    "yt-dlp (>=2025.2.19,<2026.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "secretstorage (>=3.3.3,<4.0.0)"
]

[project.optional-dependencies]
test = [
    "pytest-cov (>=4.0.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.41.2"
pyyaml = "^6.0.1"
typing = "^3.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-timeout = "^2.3.1"

[tool.poetry.scripts]
vkvideo = "src.app.main:main"

[tool.pytest.ini_options]
testpaths = [
    "src/tests"
]
